# monitoring-anomaly-detection

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
data/: station_observations.csv
docs/: architecture.md  demo-storyboard.md
src/monitoring_anomaly_detection/: __init__.py  pipeline.py
tests/: test_pipeline.py
