[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-anomaly-detection"
version = "0.1.0"
description = "Anomaly detection pipeline for monitoring telemetry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
monitoring-anomaly = "monitoring_anomaly_detection.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]